# alphanumeric-sort

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
benches/: bench.rs
examples/: sort_files_by_file_names.rs
src/: lib.rs  std_functions.rs
tests/: tests.rs
